# DRAGAN

./: .env  DRAGAN_BMB_test.py  DRAGAN_chat.py  docker-compose.yml  requirements.txt
ANALYSIS/: FULL_ANALYSIS.xlsx
ANSWERS/: answers_100_allsamples.csv  answers_100_halfsamples.csv  answers_100_nosamples.csv
QUESTIONS/: questions_100.txt
chatbot_api/: pyproject.toml
chatbot_api/src/agents/: dragan_rag_agent.py
chatbot_api/src/chains/: dragan_cypher_chain.py  dragan_textanalysis_chain.py
chatbot_api/src/chatbot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dragan_datautils/parse_indicators/: P1-05-Drug_disease_HEADER_REMOVED.txt  parse_indicators.py
dragan_datautils/parse_targets/: parse_drugs.py  parse_targets.py
dragan_neo4j_etl/: pyproject.toml
dragan_neo4j_etl/src/: dragan_bulk_csv_write.py  entrypoint.sh
